// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DocumentStatusBadge should match snapshot for all statuses 1`] = `
<div
  class="rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-primary/80 inline-flex items-center gap-1.5 bg-neutral-100 text-neutral-700 dark:bg-neutral-800 dark:text-neutral-300"
>
  <svg
    class="lucide lucide-upload h-3.5 w-3.5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
    />
    <polyline
      points="17 8 12 3 7 8"
    />
    <line
      x1="12"
      x2="12"
      y1="3"
      y2="15"
    />
  </svg>
  <span>
    Uploading
  </span>
</div>
`;

exports[`DocumentStatusBadge should match snapshot for all statuses 2`] = `
<div
  class="rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-primary/80 inline-flex items-center gap-1.5 bg-neutral-100 text-neutral-700 dark:bg-neutral-800 dark:text-neutral-300"
>
  <svg
    class="lucide lucide-loader h-3.5 w-3.5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      x1="12"
      x2="12"
      y1="2"
      y2="6"
    />
    <line
      x1="12"
      x2="12"
      y1="18"
      y2="22"
    />
    <line
      x1="4.93"
      x2="7.76"
      y1="4.93"
      y2="7.76"
    />
    <line
      x1="16.24"
      x2="19.07"
      y1="16.24"
      y2="19.07"
    />
    <line
      x1="2"
      x2="6"
      y1="12"
      y2="12"
    />
    <line
      x1="18"
      x2="22"
      y1="12"
      y2="12"
    />
    <line
      x1="4.93"
      x2="7.76"
      y1="19.07"
      y2="16.24"
    />
    <line
      x1="16.24"
      x2="19.07"
      y1="7.76"
      y2="4.93"
    />
  </svg>
  <span>
    Queued
  </span>
</div>
`;

exports[`DocumentStatusBadge should match snapshot for all statuses 3`] = `
<div
  class="rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-primary/80 inline-flex items-center gap-1.5 bg-blue-100 text-blue-700 dark:bg-blue-900 dark:text-blue-300"
>
  <svg
    class="lucide lucide-clock h-3.5 w-3.5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <polyline
      points="12 6 12 12 16 14"
    />
  </svg>
  <span>
    Processing
  </span>
</div>
`;

exports[`DocumentStatusBadge should match snapshot for all statuses 4`] = `
<div
  class="rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-primary/80 inline-flex items-center gap-1.5 bg-green-100 text-green-700 dark:bg-green-900 dark:text-green-300"
>
  <svg
    class="lucide lucide-check-circle h-3.5 w-3.5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
    />
    <path
      d="m9 11 3 3L22 4"
    />
  </svg>
  <span>
    Completed
  </span>
</div>
`;

exports[`DocumentStatusBadge should match snapshot for all statuses 5`] = `
<div
  class="rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent hover:bg-primary/80 inline-flex items-center gap-1.5 bg-red-100 text-red-700 dark:bg-red-900 dark:text-red-300"
>
  <svg
    class="lucide lucide-xcircle h-3.5 w-3.5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="m15 9-6 6"
    />
    <path
      d="m9 9 6 6"
    />
  </svg>
  <span>
    Failed
  </span>
</div>
`;
